Push full project from VS Code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <script src="index.js"></script>
+    <body>
+  <div class="instruction" id="instruction">
+     Move your mouse to see magic!
+  </div>
+     <script src="index.js"></script>
   </body>
 </html>
