Adding heading:Use your mouse to see the magic

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Heart Trail Animation</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  
     <body>
-  <div class="instruction" id="instruction">
-     Move your mouse to see magic!
-  </div>
+     <h1 style="text-align: center; color: crimson;">
+    Use your mouse to see the magic ✨
+  </h1>
      <script src="index.js"></script>
   </body>
 </html>
